@@ -1,3 +1,14 @@
+2012-11-06  Filip Pizlo  <fpizlo@apple.com>
+
+        Indentation of JSCell.h is wrong
+        https://bugs.webkit.org/show_bug.cgi?id=101379
+
+        Rubber stamped by Alexey Proskuryakov.
+
+        Just removed four spaces on a bunch of lines.
+
+        * runtime/JSCell.h:
+
 2012-11-05  Filip Pizlo  <fpizlo@apple.com>
 
         Indentation of JSObject.h is wrong
